# rudp-protocol-svc-c

./: .gitignore  CMakeLists.txt  Dockerfile.rudp-client  Dockerfile.rudp-server  README.md  docker-compose.yaml
rudp-client/: CMakeLists.txt  rudp-socket-client.c
rudp-protocol-kit/: CMakeLists.txt  rudp-protocol.c  rudp-protocol.h
rudp-server/: CMakeLists.txt  rudp-socket-server.c
schema/: schema.cql
storage-kit/: CMakeLists.txt  storage-repository.c  storage-repository.h  storage.c  storage.h
